--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -14,7 +14,7 @@
             <div class="lg:col-span-2">
                 <div class="flex items-center space-x-3 mb-6">
                     <div class="logo-container w-16 h-auto">
-                        <img src="/public/images/logo/BRAND_LOGO.svg" alt="Properties 4 Creations Logo"
+                        <img src="/images/logo/BRAND_LOGO.svg" alt="Properties 4 Creations Logo"
                             class="w-full h-auto">
                     </div>
                     <div>
